remove some links

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,6 +27,10 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
+    location ~ /\.(env|git|ht|svn|project) {
+        deny all;
+    }
+
     location ~ /\.(?!well-known).* {
         deny all;
     }
